--- a/.github/workflows/test_action_4.x.yml
+++ b/.github/workflows/test_action_4.x.yml
@@ -2,6 +2,7 @@ name: Test Action 4.x
 on:
   push:
     branches: [ 'master', 'main', 'prod', 'production' ]
+  workflow_run:
 
 jobs:
   TestAction:
